# plutus-pioneer-program

./: README.md
Week10/: Week10Notes.hs  plutus-pioneer-program-week10.cabal
Week10/app/: Uniswap.hs  uniswap-client.hs  uniswap-pab.hs
Week10/curl/: add.sh  close.sh  create.sh  funds.sh  logs.sh  pools.sh  remove.sh  status.sh  swap.sh
Week2/Custom-Data/: IsData.hs
Week2/Homework/: Homework1.hs  Homework2.hs
Week2/Typed-Validator/: Typed.hs
Week2/burn-validator/: Burn.hs  example tx data
Week2/first-validator/: Gift.hs
Week2/specific-redeemer/: FortyTwo.hs
Week3/: Parameterized.hs  Vesting.hs
Week3/Deployment/: Deploy.hs  Notes.hs
Week3/Homework/: Homework1.hs  Homework2.hs
Week4/: Either.hs  Homework.hs  IntroNotes.hs  Maybe.hs
Week4/ContractMonad/: Contract.hs
Week4/EmulatorTrace/: Trace.hs  Vesting.hs
Week4/Monads/: Monad.hs  Writer.hs
Week5/: Week5Notes.hs
Week5/Homework/: Homework1.hs  Homework2.hs
Week5/NFTMintingPolicy/: NFT.hs
Week5/SignedMintingPolicy/: Signed.hs
Week5/SimpleMintingPolicy/: Free.hs
Week6/: Week6Notes.hs  plutus-pioneer-program-week6.cabal
Week6/Oracle/: Core.hs  Funds.hs  PAB.hs  Swap.hs  Test.hs
Week6/app/: oracle-client.hs  oracle-pab.hs  swap-client.hs
Week7/: Week7Notes.hs
Week7/State/: EvenOdd.hs  RockPaperScissors.hs  StateMachine.hs  Test.hs  TestRockPaperScissors.hs  TestStateMachine.hs
Week8/: Lens.hs  QuickCheck.hs  TokenSale.hs  TokenSaleWithClose.hs  Week8Notes.hs
Week8/test/: Spec.hs
Week8/test/Spec/: Model.hs  ModelWithClose.hs  Trace.hs  TraceWithClose.hs
burn-validator/: Burn.hs
first-validator/: Gift.hs
