-- direct copy and paste of the week10 cabal file for the uniswap end to end walkthrough build 
-- I did not write this Lars did as seen in the Author field
Cabal-Version: 2.4
Name: plutus-pioneer-program-week10
Version: 0.1.0.0
Author:              Lars Bruenjes
Maintainer:          lars.bruenjes@iohk.io
Build-Type:          Simple
Copyright:           © 2021 Lars Bruenjes
License:             Apache-2.0
License-files:       LICENSE

source-repository head
    type: git
    location: https://github.com/input-output-hk/plutus-pioneer-program

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable
    ghc-options: -Wall -Wnoncanonical-monad-instances
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities
                 -- See Plutus Tx readme
                 -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

-- primary plutus application backend module running the 
executable uniswap-pab
    main-is:         uniswap-pab.hs
    -- contains common defintions for use in the module
    other-modules:   Uniswap
    hs-source-dirs:  app
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wno-missing-import-lists -Wredundant-constraints -O0
    build-depends:
        base >=4.9 && <5,
        aeson -any,
        bytestring -any,
        containers -any,
        data-default -any,
        freer-extras -any,
        freer-simple -any,
        plutus-contract -any,
        plutus-ledger -any,
        plutus-pab,
        plutus-use-cases -any,
        prettyprinter -any,
        text -any

-- simple console based front end for the uniswap application
executable uniswap-client
  main-is:             uniswap-client.hs
  -- contains common defintions for use in the module
  other-modules:       Uniswap 
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       aeson
                     , base ^>= 4.14.1.0
                     , bytestring
                     , plutus-contract
                     , plutus-ledger
                     , plutus-pab
                     , plutus-use-cases
                     , prettyprinter
                     , req ^>= 3.9.0
                     , text
                     , uuid
